--- a/Mon-App/src/App.css
+++ b/Mon-App/src/App.css
@@ -208,10 +208,6 @@ header nav .connexion:hover {
   color: black;
 }
 
-* {
-  outline: 1px solid red; /* Cela trace une bordure rouge autour de tous les éléments */
-}
-
 .containerimg {
   position: relative;
   text-align: center;
@@ -251,6 +247,7 @@ header nav .connexion:hover {
 }
 
 .bienfaits {
+  color: black;
   font-size: x-large;
   font-family: Arial;
   font-weight: bolder;
@@ -368,10 +365,22 @@ header nav .connexion:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%; /*Viewport Height*/
+  height: 826px; /*Viewport Height*/
   width: 100%;
   background: url("/src/Assets/images/istockphoto.jpg"); /* Image de fond */
-  background-position: center;
+  background-size: cover;
+  flex-direction: column;
+  gap: 3.5em;
+  flex-grow: 1;
+}
+
+.fullscreen_inscription {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 1000px; /*Viewport Height*/
+  width: 100%;
+  background: url("/src/Assets/images/istockphoto.jpg"); /* Image de fond */
   background-size: cover;
   flex-direction: column;
   gap: 3.5em;
@@ -380,7 +389,7 @@ header nav .connexion:hover {
 
 .fullscreenh1 {
   color: #fff;
-  margin-top: 1.5em;
+  margin-top: 2.5em;
   font-size: 3em;
   text-align: center;
 }
@@ -731,6 +740,7 @@ ul li strong {
 }
 
 /* Section ExplicationExo */
+
 .section-exo {
   background: linear-gradient(135deg, #3498db, #2ecc71);
   color: #fff;
@@ -1306,6 +1316,7 @@ input[type="submit"]:focus {
 }
 
 .h1_Abonnement {
+  color: black;
   font-size: 2.5rem;
   margin-bottom: 1rem;
 }
@@ -1361,12 +1372,17 @@ input[type="submit"]:focus {
 }
 
 /* Titre des abonnements */
+
+.para_Abonnement {
+  font-size: large;
+  font-weight: 500;
+}
 .h2_Abonnement {
   font-size: 1.8rem;
   font-weight: bold;
   margin-bottom: 1rem;
   text-align: center;
-  color: blue;
+  color: black;
 }
 
 /* Contenu des offres */
@@ -1441,7 +1457,7 @@ input[type="submit"]:focus {
 /* PourquoiSabonner */
 #pouquoi_sabonner {
   padding: 2rem;
-  background-color: rgba(36, 151, 151, 0.822);
+  background-color: rgb(171, 206, 206);
   text-align: center;
 }
 
@@ -1483,7 +1499,7 @@ input[type="submit"]:focus {
 /* RedirectionVideo */
 #redirection_vidéo {
   padding: 2rem;
-  background-color: rgba(36, 151, 151, 0.822);
+  background-color: rgb(171, 206, 206);
   text-align: center;
 }
 
@@ -1593,6 +1609,7 @@ input[type="submit"]:focus {
 .h2_Accueil {
   display: flex;
   justify-content: center;
+  text-align: center;
   font-size: 2.5rem;
   color: black;
   margin-bottom: 20px;
@@ -1631,6 +1648,15 @@ button.button_accueil:hover {
 }
 
 .p_Accueil {
+  text-align: center;
+  font-size: 1.1rem;
+  margin-top: 20px;
+  font-weight: 400;
+}
+
+.a_Accueil {
+  display: flex;
+  justify-content: center;
   font-size: 1.1rem;
   margin-top: 20px;
   font-weight: 400;
@@ -1996,4 +2022,440 @@ button.button_accueil:hover {
     margin-right: 0;
     margin-bottom: 20px;
   }
+}
+
+/* Section principale */
+.Section_Hdc {
+  padding: 20px;
+  width: 850px;
+  margin: 120px auto;
+  background: linear-gradient(135deg, #ffecd2, #9fbcfc);
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(10, 33, 241, 0.952);
+  font-family: "Roboto", sans-serif;
+  color: black;
+}
+
+/* Titre principal */
+.h1_Hdc {
+  font-size: 2.5em;
+  font-weight: bold;
+  text-align: center;
+  color: #2c3e50;
+  margin-bottom: 25px;
+}
+
+/* Image du coach */
+.img_Hdc {
+  display: block;
+  width: 100%;
+  max-width: 400px;
+  height: 350px;
+  margin: 20px auto;
+  border-radius: 10%;
+  border: 5px solid #fff;
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+}
+
+.img_Hdc1 {
+  display: block;
+  width: 500px;
+  height: 350px;
+  margin: 20px auto;
+  border-radius: 10%;
+  border: 5px solid #fff;
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* Section des étoiles et notes */
+.div_Hdc {
+  display: flex;
+  justify-content: center; /* Centre les étoiles */
+  align-items: center; /* Assure un alignement vertical */
+  flex-direction: column;
+  gap: 10px; /* Ajoute un espace uniforme entre les étoiles */
+}
+
+.div_Hdc1 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+.span_Hdc {
+  font-size: 1.8em;
+  margin: 0;
+  transition: transform 0.3s ease;
+}
+
+.span_Hdc:hover {
+  transform: scale(1.2); /* Agrandit légèrement l'étoile au survol */
+}
+
+.span_Hdc1 {
+  font-size: 1.2em;
+  margin-left: 10px;
+  font-weight: bold;
+  color: #e67e22;
+}
+
+/* Sous-titres */
+.h2_Hdc {
+  font-size: 1.8em;
+  color: #34495e;
+  margin-bottom: 15px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+/* Texte descriptif */
+.p_Hdc {
+  font-size: 1.1em;
+  color: black;
+  line-height: 1.6;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+/* Titres des fonctionnalités */
+.h3_Hdc {
+  font-size: 1.4em;
+  color: #2c3e50;
+  margin-bottom: 8px;
+}
+
+/* Liste des résultats */
+.ul_Hdc {
+  list-style: none;
+  padding: 0;
+}
+
+.li_Hdc {
+  text-align: center;
+  font-size: 1.1em;
+  margin-bottom: 10px;
+  background: #fff;
+  padding: 10px 15px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.li_Hdc:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* Réactivité pour écrans plus petits */
+@media (max-width: 768px) {
+  .Section_Hdc {
+    padding: 20px;
+  }
+
+  .h1_Hdc {
+    font-size: 2em;
+  }
+
+  .img_Hdc {
+    max-width: 300px;
+  }
+
+  .h2_Hdc {
+    font-size: 1.5em;
+  }
+
+  .li_Hdc {
+    font-size: 1em;
+  }
+}
+
+/* Section principale - Bas Cardio */
+
+.section_Bascardio {
+  padding: 20px;
+  max-width: 900px;
+  margin: 120px auto;
+  margin-bottom: 50px;
+  background: linear-gradient(135deg, #ffecd2, #9fbcfc);
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(10, 33, 241, 0.952);
+  font-family: "Roboto", sans-serif;
+  color: black;
+}
+
+.section_Bascardio1 {
+  padding: 20px;
+  max-width: 900px;
+  margin: 40px auto;
+  margin-bottom: 50px;
+  background: linear-gradient(135deg, #ffecd2, #9fbcfc);
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(10, 33, 241, 0.952);
+  font-family: "Roboto", sans-serif;
+  color: black;
+}
+
+.section_Bascardio2 {
+  padding: 20px;
+  max-width: 900px;
+  margin: 40px auto;
+  margin-bottom: 50px;
+  background: linear-gradient(135deg, #ffecd2, #9fbcfc);
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(10, 33, 241, 0.952);
+  font-family: "Roboto", sans-serif;
+  color: black;
+}
+
+/* Titre principal et secondaires */
+.h1_Bascardio,
+.h2_Bascardio {
+  font-size: 2.2em;
+  font-weight: bold;
+  text-align: center;
+  color: #2c3e50;
+  margin-bottom: 25px;
+}
+
+.h2_Bascardio {
+  font-size: 1.8em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 20px;
+}
+
+/* Paragraphes */
+.p_Bascardio {
+  text-align: center;
+  font-size: 1.1em;
+  color: black;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+/* Images */
+.img_Bascardio {
+  display: block;
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  margin: 20px auto;
+  border-radius: 10%;
+  border: 5px solid #fff;
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* Conteneur des cartes */
+.div_Bascardio {
+  margin-bottom: 30px;
+  text-align: center;
+  background: #fff;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.div_Bascardio:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* Titres des cartes */
+.h3_Bascardio {
+  font-size: 1.4em;
+  color: #2c3e50;
+  margin-bottom: 8px;
+}
+
+/* Liste des éléments */
+.ul_Bascardio {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.li_Bascardio {
+  text-align: center;
+  font-size: 1.1em;
+  margin-bottom: 10px;
+  background: #fff;
+  padding: 10px 15px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.li_Bascardio:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+.li_Bascardio1 {
+  text-align: center;
+  font-size: 1.1em;
+  margin-bottom: 10px;
+  background: #c6e1e7;
+  padding: 10px 15px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.li_Bascardio1:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* Mise en valeur des textes importants */
+.strong_Bascardio {
+  font-weight: bold;
+  color: #34495e;
+}
+
+/* Étoiles et notes */
+.span_Bascardio {
+  font-size: 1.8em;
+  margin: 0 5px;
+  color: gold;
+  transition: transform 0.3s ease;
+}
+
+.span_Bascardio:hover {
+  transform: scale(1.2);
+}
+
+.span_Bascardio1 {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: black;
+  margin-left: 10px;
+}
+
+/* Réactivité pour les écrans plus petits */
+@media (max-width: 768px) {
+  .section_Bascardio {
+    padding: 15px;
+  }
+
+  .h1_Bascardio,
+  .h2_Bascardio {
+    font-size: 1.5em;
+  }
+
+  .img_Bascardio {
+    max-width: 300px;
+  }
+
+  .p_Bascardio,
+  .li_Bascardio {
+    font-size: 1em;
+  }
+}
+
+/* Conteneur principal */
+.div_contact {
+  margin: 120px auto;
+  margin-bottom: 30px;
+  max-width: 600px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(26, 22, 233, 0.836);
+}
+
+.div_contact1 {
+  text-align: center;
+  margin: 30px auto;
+  max-width: 600px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(26, 22, 233, 0.836);
+}
+
+/* Titres */
+.h2_contact {
+  font-size: 1.5rem;
+  color: #444;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.h3_contact {
+  font-size: 1.2rem;
+  color: #007bff;
+  text-align: center;
+  margin-top: 20px;
+}
+
+/* Texte */
+.p_contact {
+  text-align: center;
+  font-size: 1rem;
+  color: black;
+  line-height: 1.5;
+  margin-bottom: 10px;
+}
+
+/* Liens */
+.a_contact {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.a_contact:hover {
+  text-decoration: underline;
+}
+
+/* Formulaire */
+.form_contact {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.textarea_contact {
+  resize: none;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 0;
+  font-size: 1rem;
+  color: black;
+  transition: border-color 0.3s;
+  text-align: start;
+}
+
+.textarea_contact:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
+}
+
+.textarea_contact:placeholder {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
+  margin: 10px;
+}
+
+/* Bouton */
+.button_contact {
+  padding: 10px 15px;
+  font-size: 1rem;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button_contact:hover {
+  background-color: #0056b3;
 }
