--- a/Mon-App/src/App.css
+++ b/Mon-App/src/App.css
@@ -530,6 +530,100 @@ footer nav a {
 }
 /* -----------------LE  FOOTER (fin)---------------*/
 
+@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
+
+.Notre-Equipe-Section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: auto;
+  max-height: 500px;
+  background-color: #20232a;
+  gap: 5.2em;
+  padding-bottom: 6em;
+  margin-bottom: 25px;
+}
+.LogoTeam {
+  height: 3em;
+  width: 3em;
+  margin: -15px;
+}
+.Notre-Equipe-Section h2 {
+  text-transform: uppercase;
+  font-family: "Russo One";
+  text-shadow: #0e3ca7 0 10px 25px;
+  color: #ddd;
+}
+.Effectif {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+.Portrait {
+  display: inline-block;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  width: 350px;
+  height: 300px;
+  position: relative;
+  margin: 0px;
+  box-shadow: 0 2px 50px rgba(0, 0, 0, 0.767);
+}
+.Portrait img {
+  width: 100%;
+  height: 100%;
+  float: left;
+}
+.Portrait span {
+  background-color: rgba(0, 0, 0, 0.9);
+  width: 100%;
+  margin-left: -100%;
+  position: absolute;
+  height: 400px;
+  z-index: 70;
+  color: #fff;
+  opacity: 0;
+  transition: opacity 0.2s ease-out;
+  transition-delay: 0.25s;
+  background: linear-gradient(rgba(0, 0, 0, 0.603), rgba(8, 101, 241, 0.856));
+}
+
+.Portrait span p {
+  position: absolute;
+  width: 100%;
+  opacity: 0;
+  bottom: 0;
+  display: block;
+  transition: 0.5s;
+  font-size: 31px;
+  font-family: "Russo One", sans-serif;
+  text-align: right;
+  margin-left: -30px;
+}
+.Portrait span:hover {
+  opacity: 1;
+  transition: opacity 0.2s ease-out;
+  box-shadow: #0e32a7e0 0 -2px 20px;
+}
+.Portrait span:hover p {
+  opacity: 1;
+  bottom: 25px;
+  transition-delay: 0.24s;
+}
+.Portrait:hover {
+  transform: scale(1.07);
+  z-index: 71;
+}
+.Portrait span p b {
+  font-family: "Courier New", Courier, monospace;
+  text-transform: uppercase;
+  font-size: 17px;
+  display: block;
+}
+
 .social-media {
   display: flex;
   gap: 40px; /* Espace entre chaque icône */
