--- a/Mon-App/src/App.css
+++ b/Mon-App/src/App.css
@@ -919,7 +919,7 @@ ul li strong {
 }
 
 .materiel-illustration {
-  background: rgb(240, 233, 233);
+  background: rgba(221, 196, 196, 0.418);
   border-radius: 12px;
   padding: 20px;
   box-shadow: 0px 6px 12px rgba(20, 16, 16, 0.836);
