--- a/Mon-App/src/App.css
+++ b/Mon-App/src/App.css
@@ -134,18 +134,36 @@ header {
   background-size: cover;*/
 }
 
+.logo-container {
+  display: flex; /* Aligne les éléments sur une même ligne */
+  align-items: center; /* Centre les éléments verticalement */
+  gap: 10px; /* Ajoute un espace entre le logo et le texte */
+}
+
 .logo {
   width: 100px; /* Définit la largeur du logo */
-  height: 5.5em; /* Permet à la hauteur de s'ajuster automatiquement */
+  height: auto; /* Garde les proportions */
   cursor: pointer;
   border-radius: 50%;
   background-color: transparent;
   box-shadow: #32d3ff 0 4px 0px;
+  transition: transform 0.2s, background-color 0.2s; /* Ajoute une transition fluide */
 }
+
 .logo:hover {
   transform: scale(1.15);
-  transition: 0.2s;
   background-color: rgba(53, 86, 86, 0.149);
+}
+
+.Name {
+  font-size: 1.2em; /* Ajuste la taille du texte */
+  color: #32d3ff; /* Définit la couleur du texte */
+  text-decoration: none; /* Supprime le soulignement */
+  cursor: pointer;
+}
+
+.Name:hover {
+  text-decoration: underline; /* Ajoute un effet au survol */
 }
 
 /* -----------------LE  HEADER (fin)---------------*/
